--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf</artifactId>
+			<version>2.5.2</version>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>rest-cxf-1</finalName>
@@ -71,6 +77,16 @@
 					<path>/cxf</path>
 					<warFile>${project.basedir}/target/${project.build.finalName}.war</warFile>
 				</configuration>
+			</plugin>
+			<plugin>
+			        <groupId>org.mortbay.jetty</groupId>
+			        <artifactId>maven-jetty-plugin</artifactId>
+			        <version>6.1.10</version>
+			        <configuration>
+			                <scanIntervalSeconds>10</scanIntervalSeconds>
+			                <stopKey>foo</stopKey>
+			                <stopPort>9999</stopPort>
+			        </configuration>
 			</plugin>
 		</plugins>
 	</build>
