--- a/pom.xml
+++ b/pom.xml
@@ -69,24 +69,32 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat6-maven-plugin</artifactId>
-				<version>2.0-beta-1</version>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.10</version>
 				<configuration>
-					<port>9999</port>
-					<path>/cxf</path>
-					<warFile>${project.basedir}/target/${project.build.finalName}.war</warFile>
+					<connectors>
+						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+							<port>9090</port>
+							<maxIdleTime>60000</maxIdleTime>
+						</connector>
+					</connectors>
+					<scanIntervalSeconds>20</scanIntervalSeconds>
+					<stopKey>foo</stopKey>
+					<stopPort>9999</stopPort>
+					<webAppConfig>
+						<contextPath>/cxf</contextPath>
+					</webAppConfig>
 				</configuration>
 			</plugin>
 			<plugin>
-			        <groupId>org.mortbay.jetty</groupId>
-			        <artifactId>maven-jetty-plugin</artifactId>
-			        <version>6.1.10</version>
-			        <configuration>
-			                <scanIntervalSeconds>10</scanIntervalSeconds>
-			                <stopKey>foo</stopKey>
-			                <stopPort>9999</stopPort>
-			        </configuration>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat6-maven-plugin</artifactId>
+				<version>2.0-beta-1</version>
+				<configuration>
+					<port>8080</port>
+					<path>/cxf</path>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
